Feat: Functionality of Swagger is added, and for this the routing system is changed, cause swagger don't know the NSRoute
